Fix window maximize bug.
When window is maximize, the window overlays non-client area.

--- a/Twining/Windows/Window.xaml
+++ b/Twining/Windows/Window.xaml
@@ -60,6 +60,8 @@
     </Style>
 
     <Style x:Key="wnd-metro" TargetType="Window">
+        <Setter Property="MaxHeight" Value="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}" />
+        <Setter Property="MaxWidth" Value="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}" />
         <Setter Property="WindowStyle" Value="None" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
