--- a/WpfApplication/Views/MainWindow.xaml
+++ b/WpfApplication/Views/MainWindow.xaml
@@ -1,8 +1,13 @@
 ﻿<Window x:Class="WpfApplication.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:WpfApplication.ViewModels"
         Title="MainWindow" Height="350" Width="525"
+        Icon="/WpfApplication;component/Resources/favicon.ico"
         Style="{StaticResource wnd-metro}">
+    <Window.DataContext>
+        <vm:MainViewModel />
+    </Window.DataContext>
     <Grid>
         <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <TabItem Header="TabItem">
@@ -12,11 +17,23 @@
                     <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="24,76,0,0" VerticalAlignment="Top" IsChecked="True"/>
                     <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="24,106,0,0" VerticalAlignment="Top" IsChecked="True"/>
                     <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="24,127,0,0" VerticalAlignment="Top"/>
-
                 </Grid>
             </TabItem>
-            <TabItem Header="TabItem">
-                <Grid/>
+            <TabItem Header="Button">
+                <Grid>
+                    <Button Content="Default" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-default}"/>
+                    <Button Content="Primary" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-primary}"/>
+                    <Button Content="Success" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-success}"/>
+                    <Button Content="Info" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-info}"/>
+                    <Button Content="Warning" HorizontalAlignment="Left" Margin="330,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-warning}"/>
+                    <Button Content="Denger" HorizontalAlignment="Left" Margin="410,10,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource btn-danger}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="DataGrid">
+                <Grid>
+                    <DataGrid Name="DataGrid" Margin="10" ItemsSource="{Binding Path=UserList}">
+                    </DataGrid>
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
